@startuml

title __SERVICE's Class Diagram__\n

  namespace ub.edu {
    namespace database.service {
      interface ub.edu.resources.service.AbstractFactoryData {
          {abstract} + createDAOClient()
          {abstract} + createDAOSerie()
      }
    }
  }


  namespace ub.edu {
    namespace database.service {
      class ub.edu.resources.service.DataService {
          + DataService()
          + getAllSeries()
          + getClientByUsuariAndPassword()
          + getEpisodisBySerieAndTemporada()
          + getSerieById()
          + getTemporadesBySerie()
      }
    }
  }


  namespace ub.edu {
    namespace database.service {
      class ub.edu.resources.service.FactoryMOCK {
          + createDAOClient()
          + createDAOSerie()
      }
    }
  }


  namespace ub.edu {
    namespace database.service {
      class ub.edu.resources.service.FactorySQL {
          + createDAOClient()
          + createDAOSerie()
      }
    }
  }


  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOClient : clientDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOSerie : serieDAO
  ub.edu.resources.service.FactoryMOCK .up.|> ub.edu.resources.service.AbstractFactoryData
  ub.edu.resources.service.FactorySQL .up.|> ub.edu.resources.service.AbstractFactoryData


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml